# rainet_access_battle

./: .gitignore  README.md  pyproject.toml
src/: run.py
src/core/: board.py  exceptions.py  game.py  io_handler.py  piece.py  player.py  utils.py
src/web_server/: app.py  test_app.py
