[tool.poetry]
name = "rainet_access_battle"
version = "0.1.0"
description = "webserver for Steins;Gate board game"
license = "GPL-3.0-or-later"
readme = "README.md"

authors = [
    "Rostislav Misiura <rostislav9999@gmail.com>",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"
pytest = "^8.1.1"
mypy = "^1.9.0"
pytest-asyncio = "^0.23.5.post1"
blacksheep = {git = "https://github.com/Randomneo/BlackSheep.git"}
